<resources>
    <string name="app_name">Travel Tourism</string>
    <string name="title_app_bar">Pacotes</string>
    <string name="banner_inicial_do_pacote">Banner inicial do pacote</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="foto_da_cidade">Foto da Cidade</string>
    <string name="preco_final">Preço Final:</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="informacoes_do_cartao">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="mm">MM</string>
    <string name="aa">AA</string>
    <string name="nome_cartao">Nome do cartão</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="cvc">CVC</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="mascara_nome_cartao">abcdefghijklmnopqrstuvxzwyçáéíóúABCDEFGHIJKLMNOPQRSTUVXZWYÇÁÉÍÓÚ\u0020</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="confira_o_resumo_de_compra">Confira o resumo de compra:</string>
    <string name="blackground_laranja_em_cima_do_nome_parabens">Blackground laranja em cima do nome Parabéns</string>
    <string name="escolha_uma_das_opcoes">Escolha uma das opções:</string>
    <string name="fundo_azul_com_frase_de_escolha_por_cima">Fundo azul com frase de escolha por cima</string>
    <string name="verificar_ofertas">Verificar ofertas</string>
    <string name="verificar_cartoes_cadastrados">Verificar cartões cadastrados</string>
</resources>
