<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DashboardActivity">

    <ImageView
        android:id="@+id/dashboard_imgView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary"
        android:contentDescription="@string/fundo_azul_com_frase_de_escolha_por_cima" />

    <TextView
        android:id="@+id/dashboard_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="8dp"
        android:text="@string/escolha_uma_das_opcoes"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dashboard_btnVerOfertas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/verificar_ofertas"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_txtView" />

    <Button
        android:id="@+id/dashboard_VerificarCartoesCadastrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/verificar_cartoes_cadastrados"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/dashboard_btnVerOfertas"
        app:layout_constraintStart_toStartOf="@+id/dashboard_btnVerOfertas"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_btnVerOfertas" />
</android.support.constraint.ConstraintLayout>