<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_compra_BgLaranja"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/blackground_laranja_em_cima_do_nome_parabens"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/resumo_compra_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/parabens"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_BgLaranja"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_BgLaranja"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_BgLaranja"
        app:layout_constraintTop_toTopOf="@+id/resumo_compra_BgLaranja"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumo_compra_MsgCompraRealizada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/compra_realizada_com_sucesso"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_parabens"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_parabens"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_parabens" />

    <TextView
        android:id="@+id/resumo_compra_ConfiraResumoCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/confira_o_resumo_de_compra"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_BgLaranja" />

    <ImageView
        android:id="@+id/resumo_compra_imgLocal"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/banner_inicial_do_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_ConfiraResumoCompra"
        tools:srcCompat="@drawable/recife_pe" />

    <TextView
        android:id="@+id/resumo_compra_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_imgLocal"
        tools:text="Recife" />

    <TextView
        android:id="@+id/resumo_compra_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_local"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_local"
        tools:text="06/12 - 08/12  de 2018" />

    <TextView
        android:id="@+id/resumo_compra_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_data"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_data"
        tools:text="R$ 243,99" />
</android.support.constraint.ConstraintLayout>