<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_pacote_img"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/banner_inicial_do_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@drawable/recife_pe" />

    <TextView
        android:id="@+id/resumo_pacote_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_img"
        tools:text="Recife" />

    <TextView
        android:id="@+id/resumo_pacote_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_local"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_local"
        tools:text="2 Dias" />

    <TextView
        android:id="@+id/resumo_pacote_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/resumo_pacote_valor"
        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_dias"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_dias"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/resumo_pacote_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_pacote_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resumo_pacote_data"
        tools:text="R$ 243,99" />

    <TextView
        android:id="@+id/resumo_pacote_txtPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_final"
        app:layout_constraintBottom_toTopOf="@+id/resumo_pacote_valor"
        app:layout_constraintEnd_toEndOf="@+id/resumo_pacote_valor" />

    <Button
        android:id="@+id/resumo_pacote_btnPagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/realizar_pagamento"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>